# bird-painter

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/review-prompts/: SKILL.md
bird_painter/: __main__.py  brush.py  capture.py  config.py  detect_cli.py  ears.py  frame_client.py  gate.py  listen_cli.py  placeholder.py  render.py  runner.py  store.py  wall_layout.py  web.py
bird_painter/static/: index.html  layout.js  layout.test.js
docs/: hardware.md
tests/: conftest.py  test_brush.py  test_capture.py  test_config.py  test_device_picker.py  test_ears.py  test_frame_client.py  test_gate.py  test_placeholder.py  test_render.py  test_runner.py  test_store.py  test_wall_layout.py  test_wall_layout_parity.py  test_web.py
