[project]
name = "bird-painter"
version = "0.1.0"
description = "Ambient installation: paints the birds it hears outside"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # The ears: BirdNET via birdnetlib. Pulls tensorflow + librosa (heavy).
    "birdnetlib>=0.18",
    "librosa>=0.10",
    "tensorflow>=2.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bird_painter"]
