[project]
name = "bird-painter"
version = "0.1.0"
description = "Ambient installation: paints the birds it hears outside"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # The ears: BirdNET via birdnetlib. Pulls tensorflow + librosa (heavy).
    "birdnetlib>=0.18",
    "librosa>=0.10",
    "tensorflow>=2.16",
    "sounddevice>=0.4",  # live mic capture (PortAudio)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = [
    "S104",  # binding is deliberately 127.0.0.1-only; rule misfires on tests
]

[tool.ruff.lint.per-file-ignores]
# assert is pytest's idiom; S318: tests parse OUR OWN generated SVG, not
# untrusted input
"tests/*" = ["S101", "S311", "S318"]
# the SVG template's long attribute lines aren't code
"bird_painter/placeholder.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bird_painter"]
